# openfga-client

./: .gitignore  Cargo.toml  DUAL_CLIENT_GUIDE.md  README-HTTP-CLIENT-GENERATION.md  README.md
client-builder/: Cargo.toml  README.md  build.rs
client-builder/src/: lib.rs
etc/: auth-model-example.fga  auth-model-example.json  auth-model-official.json  envs.sh
etc/dex/: config.json  deployment.md  index.md
etc/fga/: auth_model.json  env.template  openfga-cli-commands.md
etc/temp/: embed-example.html  excali-md.md  excalidraw-embed.js  excalidraw-renderer.js  index.html  lz-string-decompressor.js
examples/: http_client_example.rs  json_client_example.rs
fga-models/multi-tenancy/: README.md  model.fga  res-curd.yaml  tests.yaml  tuples-org-users-groups.yaml  user-groups.yaml
fga-models/multi-tenancy/docs/: ACTION_SYSTEM.md
fga-models/multi-tenancy/tests/: actions.yaml  res-curd.yaml  user-groups.yaml
fga-models/multi-tenancy/tuples/: resources.yaml
fga-models/store/: simple-model.fga  tests.yaml
openfga-client/: Cargo.toml
openfga-client/examples/: json_client_example.rs
openfga-client/src/: generated.rs  json_types.rs  lib.rs
openfga-client/src/grpc/: mod.rs
openfga-grpc-client/: Cargo.toml  README.md
openfga-grpc-client/src/: generated.rs  lib.rs
openfga-http-client/: Cargo.toml  README.md
openfga-http-client/.openapi-generator/: FILES
openfga-http-client/docs/: Assertion.md  AssertionsApi.md  AuthErrorCode.md  BatchCheckItem.md  BatchCheckRequest.md  BatchCheckResponse.md  BatchCheckSingleResult.md  CheckError.md  CheckRequest.md  ConsistencyPreference.md  ErrorCode.md  ExpandRequest.md  ForbiddenResponse.md  InternalErrorCode.md  ListObjectsRequest.md  ListUsersRequest.md  ListUsersResponse.md  Object.md  ReadRequest.md  RelationshipQueriesApi.md  RelationshipTuplesApi.md  StoresApi.md  TupleOperation.md  TypeName.md  TypedWildcard.md  UnauthenticatedResponse.md  UnprocessableContentErrorCode.md  UnprocessableContentMessageResponse.md  User.md  UserTypeFilter.md  UsersetUser.md  WriteRequestDeletes.md  WriteRequestWrites.md
openfga-http-client/src/apis/: assertions_api.rs  authorization_models_api.rs  mod.rs  relationship_queries_api.rs  relationship_tuples_api.rs  stores_api.rs
openfga-http-client/src/models/: auth_error_code.rs  consistency_preference.rs  create_store_response.rs  error_code.rs  get_store_response.rs  internal_error_code.rs  leaf.rs  node.rs  not_found_error_code.rs  null_value.rs  store.rs  tuple.rs  tuple_change.rs  tuple_operation.rs  type_name.rs  unprocessable_content_error_code.rs  userset.rs  userset_tree_period_difference.rs  userset_tree_period_tuple_to_userset.rs  v1_period_difference.rs  v1_period_tuple_to_userset.rs  write_request_deletes.rs  write_request_writes.rs
scripts/: generate-http-client-direct.sh  generate-http-client-docker.sh  generate-http-client-npm.sh  generate-http-client.sh  openfga-cli.sh
service-demo/: AUTHN_IMPLEMENTATION_SUMMARY.md  CALLBACK_IMPLEMENTATION.md  Cargo.toml  SECURITY_RECOMMENDATIONS.md
service-demo/examples/: openfga_client_example.rs
service-demo/src/: auth.rs  context.rs  controller.rs  fga.rs  json_types.rs  lib.rs  main.rs  routes.rs
service-demo/src/apis/: auth_model.rs  mod.rs  query.rs  stores.rs  tuples.rs
service-demo/src/apis/grpc/: auth_model.rs  stores.rs  tuples.rs
service-demo/src/apis/http/: stores.rs
service-demo/src/auth/: app_state_example.rs  auth0.rs  authn.rs  authn_controller.rs  authn_example.rs  callback.rs  db_ops.rs  home.rs  login.rs  mod.rs  models.rs  oauth.rs  openid.rs  redis_pool.rs  redis_timeout_examples.rs
service-demo/src/auth/templates/: dex_login_with.html  login_with.html
service-demo/src/fga_apis/grpc/: mod.rs  query.rs  tuples.rs
service-demo/src/fga_apis/http/: auth_model.rs  query.rs  tuples.rs
service-demo/src/routes/: authn_routes.rs  dex.rs  fga.rs  mod.rs
