[workspace]
members = [ "client-builder","openfga-client", "service-demo"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }