[package]
name = "client-builder" 
version.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true }
prost = "0.13"
prost-types = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
prost-wkt-build = "0.6"
