[package]
name = "openfga-client"
version.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true, features = ["tls"] }
prost = { workspace = true, features = ["std", "prost-derive"] }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { version = "~1.0", features = ["derive"] }
