[package]
name = "openfga-grpc-client"
version.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true, features = ["tls"] }
prost = { workspace = true, features = ["std", "prost-derive"] }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { workspace = true }
