[package]
name = "service-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "time", "uuid"] }
dotenv = "0.15.0"
oauth2 = "5.0.0"
lazy_static = "1.4.0"
prost-wkt-types = { workspace = true }
openfga-grpc-client = { path = "../openfga-grpc-client" }
openfga-http-client = { path = "../openfga-http-client" }
reqwest = "0.12.23"
base64 = "0.22"
anyhow = "*"
